# Melvin_november

./: .gitattributes  .gitignore  15min_teacher_loop.sh  5minute_real_ollama_session.sh  ACTIVATION_FLOW.md  AUDIT_ACTION_PLAN.md  AUTONOMOUS_BRAIN_SUCCESS.md  BING_API_SETUP_GUIDE.md  BLENDED_REASONING_VERIFICATION.md  BOOTSTRAP_COMPLETE.md  CHANGES_SUMMARY.md  CMakeLists.txt  COGNITIVE_INTEGRATION_SUMMARY.md  COMMUNICATION_GUIDE.md  COMPLETE_SYSTEM_STATUS.md  COMPREHENSIVE_TEST_RESULTS.md  CURRENT_REAL_STATUS.md  CURRENT_STATE_ANALYSIS.md  DATA_DIGESTION_SUMMARY.md  DATA_FORMATS.md  DATA_INGESTION_GUIDE.md  DEBUG_PHILOSOPHY.md  DEEP_DIVE_ISSUES.md  DEPLOYMENT.md  DIAGNOSTICS_README.md  DSL_QUICKSTART.md  DYNAMIC_NODE_SIZING_SUMMARY.md  EDGE_CAPACITY_EXPLANATION.md  EMERGENCE_VS_SPECIAL_CASES.md  ESSENTIAL_TESTS.md  EXEC_CPU_EXECUTION_ANALYSIS.md  EXPLANATION.md  FAILING_TESTS_ANALYSIS.md  FINAL_RESEARCH_VALIDATION.md  FINAL_STATUS.md  FIX_PROOF.md  GENERAL_MECHANISM_PROPOSAL.md  GITHUB_LEARN.md  GIT_LFS_SETUP_GUIDE.md  GRAPH_CAPABILITIES.md  (+602 more)
archive/: DEPLOYMENT_COMPLETE.md  DEPLOY_DISPLAY.md  DEPLOY_NOW.md  DEPLOY_PLUGINS.md  DEPLOY_TO_JETSON.md  DISPLAY_FINAL_SOLUTION.md  DISPLAY_HARDWARE_CHECK.md  DISPLAY_TROUBLESHOOTING.md  EDGE_POINTER_FIX_SUMMARY.txt  EDGE_POINTER_SOLUTION.md  ENABLE_DISPLAY.md  ENABLE_JETSON_DISPLAY.md  FEED_C_FILES.md  FIX_BLACK_DISPLAY.md  FIX_DISPLAY_AFTER_BOOT.md  FIX_DISPLAY_RESOLUTION.md  JETSON_DISPLAY_FIX.md  LIMIT_EXPLANATION.md  MC_CONTRACT.md  MELVIN_EMERGENCE.md  MELVIN_RUN_ANALYSIS.md  MELVIN_THEORETICAL_CAPABILITIES.txt  Makefile.melvin  NO_SIGNAL_FIX.md  PHYSICS.md  QUICK_START_VM.md  README_INTELLIGENCE_TEST.md  SETUP_JETSON_VM.md  SIMPLE_RULES.md  START_HERE.md  STRESS_TEST_REPORT.md  UNUSED_CODE_ANALYSIS.txt  VOICE_SYSTEM_GUIDE.md  auto_setup_vm.sh  build_jetson.sh  chat_with_melvin.sh  check_melvin_limits  check_melvin_limits.c  clean_install_jetson.sh  complete_automated_install.sh  (+77 more)
backup_before_cleanup/: ARC_AGI2_BENCHMARK_COMPARISON.md  BLENDED_REASONING_INTEGRATION.md  HONEST_MELVIN_ASSESSMENT.md  HUGGINGFACE_SETUP.md  INSTINCT_ENGINE_COMPLETE.md  INSTINCT_ENGINE_INTEGRATION.md  INTELLIGENT_CONNECTION_TRAVERSAL.md  MELVIN_REASONING_RESPONSES.md  MELVIN_UPGRADED_SYSTEM.md  META_REASONING_IMPLEMENTATION.md  README_CPP.md  REASONING_TEST_QUESTIONS.md  UNIFIED_BRAIN_COMPLETE.md  UNIFIED_INTELLIGENT_BRAIN.md  add_compiler_to_path.bat  blended_reasoning_demo.cpp  build_complete_system.sh  build_compounding_intelligence.sh  build_continuous_autonomous.sh  build_continuous_final.sh  build_continuous_learner.sh  build_continuous_unified.sh  build_debug.sh  build_driver_enhanced.sh  build_dynamic.bat  build_genuine_autonomous.sh  build_instinct_test.bat  build_intelligent_answering.sh  build_melvin_api.sh  build_melvin_unified.bat  build_memory_consolidator.sh  build_meta_reasoning_test.bat  build_real_arc_test.sh  build_real_autonomous.sh  build_real_complete_system.sh  build_robust_complete_system.sh  build_simple.bat  build_simple_interactive.bat  build_simple_upgraded.bat  build_truly_autonomous.sh  (+109 more)
benchmarks/: Makefile  README.md  experiment1_pattern_efficiency  experiment1_pattern_efficiency.c  experiment2_hierarchical  experiment2_hierarchical.c  experiment3_scaling  experiment3_scaling.c  experiment4_long_term_learning  experiment4_long_term_learning.c  experiment5_real_world  experiment5_real_world.c  verify_all.sh
brain/: CMakeLists.txt  brain_graph.hpp  fast_brain_core.cpp  fast_brain_core.hpp  optimized_node_system.cpp  optimized_node_system.hpp  python_wrapper.cpp  test_optimized_nodes.cpp
common/: logger.cpp  logger.hpp
context/: EDGE.txt  master.txt  pattern_context.txt
data/: VM_INSTRUCTIONS.txt  brain.m  failure_analysis.txt
docs/: ACCURACY_ANALYSIS.md  ACCURATE_BOOT_TIME.md  APP_README.md  ARCHITECTURE_EXPLAINED.md  ARCHITECTURE_PURE_LOADER.md  ARCHITECTURE_REAL.md  ARM64_CRASH_FIX.md  AUDIT_REPORT.md  AUTOMATIC_EXEC_ROUTING.md  BINARY_NODE_SYSTEM_SUMMARY.md  BLANK_NODES_MISSING.md  BLANK_NODE_SUCCESS.md  BLOB_EXPLAINED.md  BOOTSTRAP_FROM_SCRATCH.md  BOOT_TIME_1TB.md  CLEAN_PHYSICS_TEST_RESULTS.md  CODE_INSTINCTS.md  COMPREHENSIVE_TEST_RESULTS.md  CONTINUOUS_TEACHER_SESSION_RESULTS.md  CREATE_VM_STEPS.md  CRITICAL_MISSING.md  CURRENT_STATUS.md  DEBUG_ROUTING_CHAIN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  DIAGNOSTIC_FINDINGS.md  DYNAMIC_EVALUATION_EXAMPLE.md  DYNAMIC_PATTERN_SIZE.md  EDGE_CREATION_FIX.md  EMERGENT_INTELLIGENCE_TEST.md  EXEC_CAPABILITIES.md  EXEC_LAW_PATCH_SUMMARY.md  EXEC_NODES_AS_OUTPUT.md  EXEC_NODE_CAPABILITIES.md  EXEC_NODE_DESIGN.md  EXEC_OUTPUT_SUMMARY.md  EXEC_TEXT_OUTPUT_GUIDE.md  EXPLICIT_EPSILON_PATCH.md  FINAL_ACCURACY_REPORT.md  FINAL_PRODUCTION_ASSESSMENT.md  (+123 more)
evaluation_results/: IMPROVED_RESULTS_SUMMARY.md  NUMERIC_RESULTS_SUMMARY.md  SCORED_EVALUATION_REPORT.md  analysis_20251205_183752.txt  analysis_20251205_184420.txt  analysis_20251205_185914.txt  llm_baseline.txt  summary_20251205_183313.md  summary_20251205_183752.md  summary_20251205_184420.md  summary_20251205_185914.md  test_1_pattern_stability.csv  test_2_locality.csv  test_3_surprise.csv  test_4_memory_recall.csv  test_5_exec_triggering.csv
hardware/: hal.hpp
include/: melvin_common.hpp
ingested_repos/: github_urls.txt
learning/: learning_engine.hpp
melvin/brain/: CMakeLists.txt  README.md  connection.cpp  connection.hpp  db.hpp  graph.hpp  node.cpp  node.hpp
melvin/brain/tests/: test_node.cpp
melvin_datasets/: collection_metadata.json  collection_results.json  final_report.json
melvin_global_memory/: complete_brain_state.json  global_memory.db
melvin_ui/: script.js
plugins/: mc_api.c  mc_beep.c  mc_beep.so.bak  mc_bootstrap.c  mc_build.c  mc_fs.c  mc_hello.c  mc_io.c  mc_parse.c  mc_scaffold.c  mc_scaffold.h  mc_voice.c
scaffolds/: scaffold_audio_processing.c  scaffold_binary_organization.c  scaffold_conversation_patterns.c  scaffold_curiosity.c  scaffold_example.c  scaffold_homeostasis.c  scaffold_path_formation.c  scaffold_smoothness.c  scaffold_structure_budget.c  (+5 more)
src/: graph_probe.c  (+97 more)
(+461 files in other folders)
